add footer section

--- a/index.html
+++ b/index.html
@@ -283,6 +283,143 @@
             </div>
           </div>
         </section>
+
+        <!-- Footer Section -->
+        <footer class="bg-gray-800 text-white pt-16 pb-8">
+          <div class="container md:w-8/12 mx-auto px-6 md:px-12">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-10">
+              <div class="space-y-4">
+                <h2 class="text-3xl font-bold text-blue-400">SwiftCart</h2>
+                <p class="text-gray-400 text-sm leading-relaxed">
+                  Your one-stop shop for all your fashion and lifestyle needs.
+                  Quality products, fast delivery, and excellent support.
+                </p>
+              </div>
+
+              <div>
+                <h3
+                  class="text-white font-bold uppercase tracking-wider mb-4"
+                >
+                  Quick Links
+                </h3>
+                <ul class="space-y-2 text-gray-400">
+                  <li>
+                    <a
+                      href="#"
+                      onclick="switchTab('home')"
+                      class="hover:text-blue-500 transition-colors"
+                      >Home</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="#"
+                      onclick="switchTab('products')"
+                      class="hover:text-blue-500 transition-colors"
+                      >Products</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="#"
+                      onclick="switchTab('about')"
+                      class="hover:text-blue-500 transition-colors"
+                      >About</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="#"
+                      onclick="switchTab('contact')"
+                      class="hover:text-blue-500 transition-colors"
+                      >Contact</a
+                    >
+                  </li>
+                </ul>
+              </div>
+
+              <div>
+                <h3
+                  class="text-gray-200 font-bold uppercase tracking-wider mb-4"
+                >
+                  Support
+                </h3>
+                <ul class="space-y-2 text-gray-400">
+                  <li>
+                    <a href="#" class="hover:text-blue-500 transition-colors"
+                      >FAQ</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#" class="hover:text-blue-500 transition-colors"
+                      >Shipping</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#" class="hover:text-blue-500 transition-colors"
+                      >Returns</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#" class="hover:text-blue-500 transition-colors"
+                      >Privacy Policy</a
+                    >
+                  </li>
+                </ul>
+              </div>
+
+              <div>
+                <h3
+                  class="text-gray-200 font-bold uppercase tracking-wider mb-4"
+                >
+                  Subscribe to our newsletter
+                </h3>
+                <p class="text-gray-400 text-sm mb-4">
+                  The latest news, articles, and resources, sent to your inbox
+                  weekly.
+                </p>
+                <div class="flex flex-col sm:flex-row gap-2">
+                  <input
+                    type="email"
+                    placeholder="Enter your email"
+                    class="input input-bordered w-full text-gray-900 bg-white focus:outline-none"
+                  />
+                  <button
+                    class="btn bg-blue-600 hover:bg-blue-700 text-white border-none"
+                  >
+                    Subscribe
+                  </button>
+                </div>
+              </div>
+            </div>
+
+            <div class="border-t border-gray-800 my-10"></div>
+
+            <div
+              class="flex flex-col md:flex-row justify-between items-center text-gray-500 text-sm"
+            >
+              <p>&copy; 2026 SwiftCart, Inc. All rights reserved.</p>
+
+              <div class="flex gap-6 mt-4 md:mt-0 text-xl">
+                <a href="#" class="hover:text-white transition-colors"
+                  ><i class="fa-brands fa-facebook"></i
+                ></a>
+                <a href="#" class="hover:text-white transition-colors"
+                  ><i class="fa-brands fa-twitter"></i
+                ></a>
+                <a href="#" class="hover:text-white transition-colors"
+                  ><i class="fa-brands fa-instagram"></i
+                ></a>
+                <a href="#" class="hover:text-white transition-colors"
+                  ><i class="fa-brands fa-linkedin"></i
+                ></a>
+                <a href="#" class="hover:text-white transition-colors"
+                  ><i class="fa-regular fa-envelope"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+        </footer>
       </section>
 
       <!-- Products Section -->
