--- a/index.html
+++ b/index.html
@@ -77,12 +77,15 @@
           </ul>
 
           <div class="navbar-end flex items-center gap-4">
-            <div class="relative cursor-pointer active:scale-95">
+            <div
+              onclick="showCart()"
+              class="relative cursor-pointer active:scale-95"
+            >
               <i class="fa-solid fa-cart-shopping text-2xl"></i>
               <div
                 class="badge absolute -top-2 left-4 bg-blue-600 border-none text-white badge-xs"
               >
-                <span>0</span>
+                <span id="cart-count">0</span>
               </div>
             </div>
 
@@ -285,7 +288,7 @@
         </section>
 
         <!-- Footer Section -->
-        <footer class="bg-gray-800 text-white pt-16 pb-8">
+        <footer class="bg-gray-800 mt-12 text-white pt-16 pb-8">
           <div class="container md:w-8/12 mx-auto px-6 md:px-12">
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-10">
               <div class="space-y-4">
@@ -297,9 +300,7 @@
               </div>
 
               <div>
-                <h3
-                  class="text-white font-bold uppercase tracking-wider mb-4"
-                >
+                <h3 class="text-white font-bold uppercase tracking-wider mb-4">
                   Quick Links
                 </h3>
                 <ul class="space-y-2 text-gray-400">
@@ -453,6 +454,32 @@
                 Close
               </button>
             </form>
+          </div>
+        </div>
+      </dialog>
+
+      <dialog id="cart_modal" class="modal modal-bottom sm:modal-middle">
+        <div class="modal-box">
+          <h3 class="font-bold text-lg text-center text-blue-600">
+            Your Shopping Cart
+          </h3>
+
+          <div
+            id="cart-items-container"
+            class="flex flex-col gap-4 my-5 max-h-80 overflow-y-auto"
+          ></div>
+
+          <div class="border-t pt-4">
+            <div class="flex justify-between font-bold text-xl mb-4">
+              <span>Total:</span>
+              <span>$<span id="cart-total-price">0.00</span></span>
+            </div>
+            <div class="modal-action">
+              <form method="dialog" class="flex gap-2 w-full">
+                <button class="btn btn-error flex-1 text-white">Close</button>
+                <button class="btn btn-primary flex-1">Checkout</button>
+              </form>
+            </div>
           </div>
         </div>
       </dialog>
